syntax = "proto3";

package face_detection;

option go_package = "github.com/attention-detection/api-gateway/pkg/proto/face_detection";

// Face Detection Microservice
service FaceDetectionService {
  // Detect faces in a frame
  rpc DetectFaces(DetectRequest) returns (DetectResponse);
  
  // Stream detection for real-time processing
  rpc StreamDetect(stream DetectRequest) returns (stream DetectResponse);
  
  // Health check
  rpc Health(HealthRequest) returns (HealthResponse);
}

message DetectRequest {
  string request_id = 1;
  bytes frame_data = 2;      // JPEG/PNG encoded image
  int32 width = 3;
  int32 height = 4;
  float confidence_threshold = 5;  // Default 0.5
}

message DetectResponse {
  string request_id = 1;
  repeated BoundingBox faces = 2;
  float processing_time_ms = 3;
  bool success = 4;
  string error = 5;
}

message BoundingBox {
  float x1 = 1;
  float y1 = 2;
  float x2 = 3;
  float y2 = 4;
  float confidence = 5;
}

message HealthRequest {}
message HealthResponse {
  bool healthy = 1;
  string version = 2;
  string device = 3;
}

